--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "sass": "sass --watch src/sass/style.scss:src/style/style.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "sass": "^1.97.3",
     "vite": "^6.4.1"
   },
   "dependencies": {
